--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -96,17 +96,17 @@ if (isNotesRoute) {
           <!-- 站內連結 -->
           <ul class="navbar-nav mb-0 d-flex flex-row gap-1">
             <li class="nav-item">
-              <a class="nav-link" href="/notes">
+              <a class={`nav-link ${isNotesRoute ? 'active' : ''}`} href="/notes">
                 <span>研究筆記</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/plans">
+              <a class={`nav-link ${isPlansRoute ? 'active' : ''}`} href="/plans">
                 <span>挑戰計畫</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/posts">
+              <a class={`nav-link ${isPostsRoute ? 'active' : ''}`} href="/posts">
                 <span>心得文章</span>
               </a>
             </li>
@@ -406,6 +406,16 @@ if (isNotesRoute) {
   }
 
   .nav-link:hover span::after {
+    width: 100%;
+  }
+
+  /* 導覽連結 active 狀態 */
+  .nav-link.active span {
+    color: var(--bs-primary);
+    font-weight: 600;
+  }
+
+  .nav-link.active span::after {
     width: 100%;
   }
 
