fix: configure styles

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -293,6 +293,10 @@ if (isNotesRoute) {
 </nav>
 
 <style>
+  .navbar {
+    height: 60px;
+  }
+
   /* 搜尋按鈕樣式 */
   .bd-search {
     position: relative;
