--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -76,7 +76,7 @@ function formatDate(date?: Date): string {
                 </div>
 
                 <a class="btn btn-outline-primary btn-sm" href={post.url}>
-                  閱讀更多 →
+                  閱讀更多 <i class="bi bi-arrow-right" />
                 </a>
               </article>
             );
