--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -53,7 +53,7 @@ function formatDate(date?: Date): string {
                 {post.frontmatter.date && (
                   <div class="post-meta text-muted mb-3">
                     <small>
-                      <i class="bi bi-calendar3" /> {formatDate(post.frontmatter.date)}
+                      {formatDate(post.frontmatter.date)} 發布
                       {post.frontmatter.tags && post.frontmatter.tags.length > 0 && (
                         <span class="ms-3">
                           <i class="bi bi-tags" />{' '}
@@ -75,7 +75,7 @@ function formatDate(date?: Date): string {
                   <PostExcerpt Content={Content} />
                 </div>
 
-                <a class="btn btn-outline-primary btn-sm" href={post.url}>
+                <a class="btn btn-outline-dark btn-sm" href={post.url}>
                   閱讀更多 <i class="bi bi-arrow-right" />
                 </a>
               </article>
